--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/seokgyulee-rick/prismagram#readme",
   "dependencies": {
-    "babel-node": "0.0.1-security",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "xcode": "^2.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "nodemon": "^2.0.2"
   },
   "scripts": {
