--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "dotenv": "^8.2.0",
+    "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.6",
+    "morgan": "^1.9.1",
     "xcode": "^2.1.0"
   },
   "devDependencies": {
