--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
     "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.10",
     "xcode": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "deploy" : "prisma deploy",
+    "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
